syntax = "proto3";
package GameProto;

message LoginRes {
	bool isMatch = 1;
}